# ml_implementation

./: .gitignore  AUDIT_REPORT.md  CURRICULUM.md  check_compile.py  dbscan.py  k_means.py  mnist_experiment.py  pyproject.toml  requirements.txt  resnet_experiment.py  run_experiment.py  test_dbscan.py  test_k_means.py
autoencoders/: __init__.py  autoencoder.py  beta_vae.py  cvae.py  test_autoencoders.py  vae.py  vqvae.py
autoencoders_pytorch/: __init__.py  autoencoder.py  beta_vae.py  cvae.py  test_autoencoders.py  vae.py  vqvae.py
configs/: bert_mlm_gpu.yaml  bert_nsp_gpu.yaml  bert_pos_gpu.yaml  bert_pos_mac.yaml  bert_pretrain_ddp.yaml  bert_pretrain_fineweb.yaml  bert_pretrain_gpu.yaml  bert_pretrain_mac.yaml  cifar10_resnet18.yaml  gpt2_openwebtext.yaml  gpt2_openwebtext_mac.yaml  gpt2_wikitext103.yaml  gpt2_wikitext2.yaml  gpt2_wikitext2_mac.yaml  imagenet_resnet18.yaml  imagenet_resnet18_ddp.yaml  imagenet_resnet50.yaml  imagenet_resnet50_ddp_a100.yaml  imagenet_resnet50_ddp_l40.yaml  imagenette_resnet.yaml  mnist_cnn.yaml  translation_multi30k.yaml  translation_multi30k_mac.yaml  translation_wmt14.yaml
examples/: README.md  __init__.py  rl_dqn_cartpole.py  rl_gridworld_qlearning.py  rl_ppo_continuous.py  train_mlp_mnist.py  train_vae_mnist.py
experiment/: __init__.py  __main__.py  config.py  logger.py  registry.py  runner.py
generative_models/: __init__.py  ddpm.py  flow_matching.py  score_matching.py  test_ddpm.py  test_flow_matching.py  test_score_matching.py
nn_primitives/: __init__.py  conv.py  dropout.py  layers.py  loss.py  normalization.py  (+7 more)
(+388 files in other folders)
